force-app/main/default/objects/Account_Comment__c/Account_Comment__c.object-meta.xml
<CustomObject>
    <label>Account Comment</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Account Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>