force-app/main/default/objects/Account_Comment__c/fields/Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>Comment_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Comment Date</label>
    <type>Date</type>
</CustomField>