force-app/main/default/objects/Account_Comment__c/fields/VTiger_Key__c.field-meta.xml
<CustomField>
    <fullName>VTiger_Key__c</fullName>
    <externalId>true</externalId>
    <label>VTiger Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>